--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_dashboard">Likes</string>
     <string name="title_notifications">Profile</string>
     <string name="title_activity_main_home">MainActivityHome</string>
+    <string name="Home">Home</string>
+    <string name="Favorites">Favourites</string>
+    <string name="Profile">Profile</string>
 </resources>
